# agentprogram

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: agent-workflow-graph.md  interview-benchmark-story.md  mvp-verification.md  project-story.md
docs/superpowers/plans/: 2026-06-07-web-task-agent-mvp.md  2026-06-23-benchmark-explainability.md
docs/superpowers/specs/: 2026-06-07-web-task-agent-design.md
docs/work-log/: 2026-06-14-llm-provider-and-action-plan.md  2026-06-14-seed-url-llm-comparison.md  2026-06-22-final-comparison-and-docs.md  2026-06-22-llm-semantic-match.md  2026-06-22-real-site-sample-http-loader.md  2026-06-22-real-site-verification.md  2026-06-23-http-error-classification.md  2026-06-23-interactive-mode.md  2026-06-23-llm-match-comparison.md  2026-06-23-real-site-sample-4-run.md
src/web_task_agent/: __init__.py  action_plan.py  browser.py  cli.py  dashboard.py  demo_pages.py  evaluation.py  extractor.py  graph_export.py  llm_extractor.py  matcher.py  models.py  reporter.py  site_fixtures.py  skill_gap.py  storage.py  verifier.py  workflow.py
tests/: __init__.py  test_action_plan.py  test_browser.py  test_dashboard.py  test_evaluation.py  test_extractor.py  test_graph_export.py  test_llm_extractor.py  test_matcher.py  test_models.py  test_reporter.py  test_scaffold.py  test_skill_gap.py  test_storage.py  test_verifier.py  test_workflow.py
tests/fixtures/: job_pages.py
